force-app/main/default/objects/Nature_of_Action__c/Nature_of_Action__c.object-meta.xml
<CustomObject>
    <label>Nature of Action</label>
    <nameField>
        <label>Nature of Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nature of Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>