force-app/main/default/objects/Nature_of_Action__c/fields/Guidance_URL__c.field-meta.xml
<CustomField>
    <fullName>Guidance_URL__c</fullName>
    <description>URL to guidance on this nature of action</description>
    <inlineHelpText>URL to guidance on this nature of action</inlineHelpText>
    <label>Guidance URL</label>
    <type>Url</type>
</CustomField>