force-app/main/default/objects/Nature_of_Action__c/fields/Request_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Request_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the employee user will be prompted to upload supporting documentation as a file(s) in the related flow</description>
    <inlineHelpText>When checked, the employee user will be prompted to upload supporting documentation as a file(s) in the related flow</inlineHelpText>
    <label>Request Supporting Documentation</label>
    <type>Checkbox</type>
</CustomField>